@@ -138,6 +138,16 @@ be in strftime(3) format. (potentially localized)</td></tr>
 this conflicted with the historical ssl %...{var}c syntax.)</div>
 </td></tr>
 
+<tr><td>%...I:</td>          
+<td>Bytes received, including request and headers, cannot be zero. You need to
+enable <code class="module"><a
+href="../mod/mod_logio.html">mod_logio</a></code> to use this.</td></tr>
+
+<tr><td>%...O:</td>          
+<td>Bytes sent, including headers, cannot be zero. You need to enable <code
+class="module"><a href="../mod/mod_logio.html">mod_logio</a></code> to use
+this.</td></tr>
+
 </table>
 
     <p>The "..." can be nothing at all (<em>e.g.</em>, <code>"%h %u
