@@ -6,4 +6,6 @@ APACHE_MODPATH_INIT(loggers)
 	
 APACHE_MODULE(log_config, logging configuration, , , yes)
 
+APACHE_MODULE(logio, input and output logging, , , no)
+
 APACHE_MODPATH_FINISH
